--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            <a href="Project.html">Projects</a>
            <a href="Education.html">Education</a>
            <a href="Experience.html">Experience</a>
-           <a href="contact.html">Contact</a>
+           <a href="contact.php">Contact</a>
            <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
 	  <div class="logo">
 	<img src="logo.png" alt="logo">
