--- a/Experience.html
+++ b/Experience.html
@@ -25,7 +25,7 @@
            <a href="index.html" class="active">Home</a>
            <a href="aboutme.html">About me</a>
            <a href="Project.html">Projects</a>
-           <a href="Education.php">Education</a>
+           <a href="Education.html">Education</a>
            <a href="Experience.html">Experience</a>
            <a href="contact.html">Contact</a>
            <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
